kubernetes/personalsite-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personalsite
  namespace: bishoy-personalsite
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    service: personalsite
